# sql-server-language-extensions

./: .gitignore  .gitmodules  CodeQL.yml  Directory.Build.props  GithubRepoMigrationPlan.md  LICENSE  NuGet.Config  README.md  Submodule.md  build-c.sh  build-cpp.sh  build-java-extension.cmd  build-java-package.cmd  create-java-extension-zip.cmd  data-sql-extensions.nuspec  data-sql-java-extension.nuspec  data-sql-language-extensions-linux.nuspec  data-sql-language-extensions-windows.nuspec  data-sql-language-extensions.nuspec  empty-script.cmd  empty-script.sh  es-metadata.yml  owners.txt  packages.config  pr-85-followup.md  restore-packages.cmd  restore-packages.sh  restore-python-packages.cmd  test_dotnet_root.cpp
.config/: servicetreeconfig.json  tsaoptions.json
.gdn/: .gdnbaselines  .gdnsuppress
.pipelines/: OneBranch.Linux.Official.yml  OneBranch.Linux.PR.yml  OneBranch.Official.yml  OneBranch.Windows.PR.yml  pipeline.user.linux.yml  pipeline.user.windows.all_buildtype.all_tag.build_dotnetcore_csharp_extension.yml  pipeline.user.windows.yml
docker-test/: Dockerfile.linux-csharp
extension-host/include/: sqlextensionhostcallbacks.h  sqlextensiontracelevel.h  sqlexternallanguage.h  sqlexternallibrary.h
java-extension/: packages.config
language-extensions/R/: README.md  owners.txt  packages.config
language-extensions/R/include/: Column.h  Common.h  Logger.h  RColumn.h  RDataSet.h  REnvironment.h  RLibrarySession.h  RParam.h  RParamContainer.h  RPathSettings.h  RSession.h  RTypeUtils.h  Rextension.h  Utilities.h
language-extensions/R/src/: CMakeLists.txt  Column.cpp  Logger.cpp  RColumn.cpp  RDataSet.cpp  REnvironment.cpp  RExtension.cpp  RLibrarySession.cpp  RParam.cpp  RParamContainer.cpp  RPathSettings.cpp  RSession.cpp  RTypeUtils.cpp  Rextension.cpp  Utilities.cpp  Utilities_linux.cpp  Utilities_win.cpp
language-extensions/R/src/linux/: RPathSettings_linux.cpp  Utilities_linux.cpp
language-extensions/R/src/windows/: RPathSettings_win.cpp  Utilities_win.cpp
language-extensions/R/test/src/: CMakeLists.txt  CMakeSettings.json  RExtensionApiTest.cpp  RExtensionApiTests.cpp  RExtensionExecuteTests.cpp  RExtensionGetOutputParamTests.cpp  RExtensionGetResultColumnTests.cpp  RExtensionGetResultsTests.cpp  RExtensionInitColumnTests.cpp  RExtensionInitParamTests.cpp  RExtensionInitSessionTests.cpp  RExtensionLibraryApiTests.cpp  RextensionApiTest.cpp  Utilities.cpp  Utilities_linux.cpp  Utilities_win.cpp  main.cpp
language-extensions/R/test/src/linux/: Utilities_linux.cpp
language-extensions/R/test/src/windows/: Utilities_win.cpp
language-extensions/dotnet-core-C#/: README.md
language-extensions/dotnet-core-C#/include/: DotnetEnvironment.h
language-extensions/dotnet-core-CSharp/: README.md  owners.txt
language-extensions/dotnet-core-CSharp/include/: DotnetEnvironment.h  Logger.h  coreclr_delegates.h  hostfxr.h  nativecsharpextension.h  nethost.h
language-extensions/dotnet-core-CSharp/test/src/native/: CMakeLists.txt  CSharpDecimalTests.cpp  CSharpDotnetRootTests.cpp  CSharpExecuteTests.cpp  CSharpExtensionApiTests.cpp  CSharpGetOutputParamTests.cpp  CSharpGetResultColumnTests.cpp  CSharpGetResultsTests.cpp  CSharpInitColumnTests.cpp  CSharpInitParamTests.cpp  CSharpInitSessionTests.cpp  CSharpLibraryTests.cpp  CSharpSetHostCallbacksTests.cpp  main.cpp
language-extensions/java/: LICENSE  README.md
language-extensions/java/include/: Common.h  JavaArgContainer.h  (+10 more)
language-extensions/java/src/: CMakeLists.txt  JavaArgContainer.cpp  JavaDataset.cpp  JavaExtensionUtils.cpp  JavaLibraryUtils.cpp  JavaPathSettings.cpp  JavaSession.cpp  JavaSqlTypeHelper.cpp  JniHelper.cpp  Logger.cpp  javaextension.cpp
language-extensions/java/src/linux/: JavaExtensionUtils_linux.cpp  JavaLibraryUtils_linux.cpp  Logger_linux.cpp
language-extensions/java/src/windows/: JavaExtensionUtils_win.cpp  JavaLibraryUtils_win.cpp  Logger_win.cpp
language-extensions/python/: README.md  owners.txt  packages.config
language-extensions/python/src/: CMakeLists.txt  Column.cpp  Logger.cpp  PythonColumn.cpp  PythonDataSet.cpp  PythonExtension.cpp  PythonExtensionUtils.cpp  PythonLibrarySession.cpp  PythonNamespace.cpp  PythonParam.cpp  PythonParamContainer.cpp  PythonPathSettings.cpp  PythonSession.cpp  PythonTypeUtils.cpp  pythonextension.cpp
language-extensions/python/src/linux/: PythonExtensionUtils_linux.cpp
language-extensions/python/src/windows/: PythonExtensionUtils_win.cpp
language-extensions/python/test/src/: CMakeLists.txt  ExtensionApiTest.cpp  PythonColumnTest.cpp  PythonExecuteTests.cpp  PythonExtensionApiTest.cpp  PythonExtensionApiTests.cpp  PythonGetOutputParamTests.cpp  PythonGetResultColumnTests.cpp  PythonGetResultsTests.cpp  PythonInitColumnTest.cpp  PythonInitColumnTests.cpp  PythonInitParamTests.cpp  PythonInitParamsTest.cpp  PythonInitTest.cpp  PythonInitTests.cpp  PythonLibraryTests.cpp  PythonTestUtilities.cpp  main.cpp
language-extensions/pythonextension/: packages.config
onnxruntime-extension/: CMakeLists.txt  README.md  cleanup.cmd  cleanup_linux.sh  packages.config
onnxruntime-extension/include/: OnnxSession.h  OrtApis.h  sqlexternallanguage.h  sqlexternallibrary.h  util.h
onnxruntime-extension/scripts/: CMakeLists_tokenizers_cpp.txt  StaticExports.cc  build_tokenizers_cpp.ps1  convert_to_onnx_with_tokenizer_exported.py  tokenizers_cpp.def
onnxruntime-extension/src/: OnnxSession.cpp  OrtApis.cpp  main.cpp  util.cpp
onnxruntime-extension/src/linux/: OnnxSession_linux.cpp  OrtApis_linux.cpp
onnxruntime-extension/src/windows/: OnnxSession_windows.cpp  OrtApis_windows.cpp
samples/c/: HelloWorld.c
samples/c++/: HelloWorld.cpp
samples/examples/tokenizers_cpp/: CMakeLists.txt  README.md  build.ps1
samples/examples/tokenizers_cpp/src/: tokenizer_exports.cpp
test/: run-unittests.cmd
test/googletest/src/: CMakeLists.txt
test/googletest/src/linux/: CMakeLists.txt.in
test/googletest/src/windows/: CMakeLists.txt.in
test/gtest/: gtest.vcxproj
test/sample-test/: sample-test.vcxproj
test/sample-test/src/: CMakeLists.txt
(+116 files in other folders)
